--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# MySQL8 ??
+spring.datasource.url=jdbc:mysql://freetier-database.c5rdslabxigz.ap-northeast-2.rds.amazonaws.com/allps_db
+spring.datasource.username=allps_admin
+spring.datasource.password=academy-allps!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# ??? SQL ?? ??
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
