--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       run: zip -r ./deploy.zip ./deploy
 
     - name: Upload deploy.zip to S3
-    - uses: shallwefootball/s3-upload-action@master
+      uses: shallwefootball/s3-upload-action@master
       with:
         aws_key_id: ${{ secrets.AWS_KEY_ID }}
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
