--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws_bucket: ${{ secrets.AWS_BUCKET }}
         source_dir: './deploy.zip'
-        destination_dir: 'allps-server/deploy.zip'
+        destination_dir: 'allps-server'
 
     - name: Deploy to server from S3
       uses: appleboy/ssh-action@master
