feature: create api docs

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,7 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/gradle,intellij+all,macos,windows
+
+application*.properties
+application*.yaml
+application*.yml
